[gd_scene load_steps=6 format=3 uid="uid://cxc3fjx74adm0"]

[ext_resource type="Texture2D" uid="uid://bup5m1arpeubd" path="res://Ghost/Sprites/Dialog/Box.png" id="1_mudsm"]
[ext_resource type="Script" path="res://Maid/Scripts/maidleveldialogue.gd" id="1_tm237"]
[ext_resource type="AudioStream" uid="uid://b0wfip7bt4q2g" path="res://Ghost/Music/PhantomMemory.wav" id="3_65gk4"]
[ext_resource type="AudioStream" uid="uid://dfus7n4hg1bym" path="res://Ghost/Sounds/Ghost_Normal.mp3" id="4_88wcn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_audlo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mudsm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MaidLevelDialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 857.0
offset_right = 1000.0
offset_bottom = 897.0
script = ExtResource("1_tm237")

[node name="MaidIllust" type="Sprite2D" parent="."]
position = Vector2(-400, -200)
scale = Vector2(0.8, 0.8)

[node name="GhostIllust" type="Sprite2D" parent="."]
position = Vector2(200, -250)
scale = Vector2(0.323, 0.323)

[node name="GolemIllust" type="Sprite2D" parent="."]

[node name="Dialogue" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -674.0
offset_top = -53.0
offset_right = 681.0
offset_bottom = 177.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 51

[node name="MaidName" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -679.0
offset_top = -147.0
offset_right = -272.0
offset_bottom = -49.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 70
text = "Momoko"

[node name="GhostName" type="RichTextLabel" parent="."]
z_index = 1
offset_left = -679.0
offset_top = -147.0
offset_right = -192.0
offset_bottom = -49.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 70
text = "Yuuki Sentaku"

[node name="GolemName" type="RichTextLabel" parent="."]
z_index = 1
offset_left = -679.0
offset_top = -147.0
offset_right = -272.0
offset_bottom = -49.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 70
text = "Golem"

[node name="DialogueBox" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.312, 1.171)
sprite_frames = SubResource("SpriteFrames_audlo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="DialogueBGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-960, -857)
stream = ExtResource("3_65gk4")

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_88wcn")
volume_db = -20.0
